# advent-of-code

./: .gitignore
2017/01/: CHANGELOG.md  README.md  project.clj
2017/02/: one.py  two.py
2017/03/: one.py  two.py
2017/04/: one.py  two.py
2017/05/: part1.py  part2.py
2017/06/: part1.py  part2.py
2017/07/: part1.py  part2.py
2017/08/: part1.py  part2.py
2017/09/: part1.py  part2.py
2017/10/: part1.py  part2.py
2017/11/: part1.py  part2.py
2017/12/: part1.py
2017/13/: part1.py  part2.py  spec.dfy
2017/14/: part1.py  part2.py
2017/15/: part1.py  part2.py  puzzle-input.txt
2017/16/: part1.py  part2.py
2017/17/: part1.py  part2.py
2017/18/: part1.py  part2.py
2017/19/: part1.py  part2.py
2017/20/: part1.py  part2.py  part2_dumb.py
2017/21/: part1.py
2017/22/: part1.py  part2.py
2017/23/: compiled.py  part1.py  part2.py  part2.txt
2017/24/: part1.py  part2.py
2017/25/: part1.py
2018/01/: frequency.dfy  frequency.py  frequency2.dfy  frequency2.py  part2.dfy  test.py
2018/02/: checksum.dfy  checksum.py  find_boxes.py
2018/03/: overlap.dfy  overlap.py
2018/04/: slee.py
2018/05/: polymer.py
2018/06/: danger.py  safety.py
2018/07/: part1.py  (+1 more)
2025/: .gitignore
ad2020/: Day1.cs
ad2021/: Cargo.toml
ad2022/: Cargo.toml
ad2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs
ad2023/: Cargo.toml
ad2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  ray24.rs
ad2024/: Cargo.toml
adlib/: Cargo.toml
aoc-parse/: Cargo.toml  LICENSE  README.md
aoc-parse/src/: context.rs  error.rs  functions.rs  lib.rs  macros.rs  matches.rs  parser.rs  parsers.rs  testing.rs  traits.rs  types.rs  util.rs
aoc-parse/src/parsers/: chars.rs  either.rs  empty.rs  exact.rs  lines.rs  map.rs  never.rs  primitive.rs  regex.rs  repeat.rs  sequence.rs  string.rs
aoc-parse/tests/: test_2015.rs  test_2016.rs  test_2021.rs  test_macros.rs
lib/: advent.py  graphs.py  grid.py
(+317 files in other folders)
