[package]
name = "ad2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
aoc-parse = "0.2.16"
anyhow = "1.0"
nalgebra = "0.29.0"
itertools = "0.10.0"
regex = "1"
rayon = "1.6"
num-rational = "0.4"
num-bigint = "0.4"
