[package]
name = "ad2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
aoc-parse = { path = "../../aoc-parse" }
anyhow = "1.0.75"
num = "0.4"
adlib = { path = "../adlib" }
