[package]
name = "ad2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adlib = { path = "../adlib" }
anyhow = "1.0.75"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
aoc-parse = { path = "../../aoc-parse" }
num = "0.4"
rand = "0.8"
