[package]
name = "aoc-parse"
version = "0.1.4"
edition = "2021"
description = "A little library for parsing your Advent of Code puzzle input"
repository = "https://github.com/jorendorff/advent-of-code"
homepage = "https://github.com/jorendorff/advent-of-code/tree/main/aoc-parse"
license = "MIT"
keywords = ["aoc", "parse", "puzzle", "parser", "advent"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
num-bigint = "0.4"
regex = "1"
thiserror = "1"
tuple_utils = "0.4"

[dev-dependencies]
anyhow = "1.0"
aoc-runner-derive = "0.3.0"
